refactor: waitings list return type Dto로 wrapping 및 Collectors.toList로 교체