@@ -6,6 +6,7 @@ import com.jungle.Tabbit.domain.nfc.entity.Nfc;
 import com.jungle.Tabbit.domain.nfc.repository.NfcRepository;
 import com.jungle.Tabbit.domain.restaurant.entity.Restaurant;
 import com.jungle.Tabbit.domain.restaurant.repository.RestaurantRepository;
+import com.jungle.Tabbit.domain.waiting.dto.WaitingListResponseDtoList;
 import com.jungle.Tabbit.domain.waiting.dto.WaitingRequestCreateDto;
 import com.jungle.Tabbit.domain.waiting.dto.WaitingResponseDto;
 import com.jungle.Tabbit.domain.waiting.entity.Waiting;
@@ -23,6 +24,7 @@ import org.springframework.stereotype.Service;
 import java.util.List;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -92,19 +94,23 @@ public class WaitingService {
         return WaitingResponseDto.of(userWaiting, estimatedWaitTime, currentWaitingPosition);
     }
 
-    public List<WaitingResponseDto> getUserWaitingList(String username) {
+    public WaitingListResponseDtoList getUserWaitingList(String username) {
         Member member = memberRepository.findMemberByUsername(username)
                 .orElseThrow(() -> new NotFoundException(ResponseStatus.FAIL_MEMBER_NOT_FOUND));
 
         List<Waiting> waitingList = waitingRepository.findByMemberAndWaitingStatus(member, WaitingStatus.STATUS_WAITING);
 
-        return waitingList.stream()
+        List<WaitingResponseDto> waitingResponseDtos = waitingList.stream()
                 .map(waiting -> {
                     int currentWaitingPosition = getCurrentWaitingPosition(waiting);
                     Long estimatedWaitTime = calculateEstimatedWaitTime(currentWaitingPosition, waiting.getRestaurant().getEstimatedTimePerTeam());
                     return WaitingResponseDto.of(waiting, estimatedWaitTime, currentWaitingPosition);
                 })
-                .toList();
+                .collect(Collectors.toList());
+
+        return WaitingListResponseDtoList.builder()
+                .waitingResponseDtos(waitingResponseDtos)
+                .build();
     }
 
     @Scheduled(cron = "0 0 0 * * ?")
